# capstone-ai-projects

./: .env  README.md  main.py  pyproject.toml
convopro_chatgpt/: main.py  pyproject.toml  requirements.txt
convopro_chatgpt/config/: settings.py
convopro_chatgpt/db/: conversations.py  mongo.py
convopro_chatgpt/llm_factory/: get_llm.py
convopro_chatgpt/services/: chat_utilities.py  get_models_list.py  get_title.py
